--- a/trunk/u_turismu/war/resources/css/home.css
+++ b/trunk/u_turismu/war/resources/css/home.css
@@ -2,3 +2,117 @@
 .demoHeaders {
 	margin-top: 2em;
 }
+
+*{
+	list-style: none;	
+}
+
+div{
+	border-radius: 8px;
+}
+
+.login{
+	height: 50px;
+	width: auto;
+	border: 1px solid #ccc;
+	background-color: gray;
+	border-radius: 10px;
+	padding-left:10px;
+	padding-right:10px;
+	padding-top: 25px;
+	
+}
+
+#loginForm{
+	float:right;
+	
+}
+
+#topPage{
+	height: 50px;
+	width: auto;
+	border: 1px solid #ccc;
+	background-color: gray;
+	border-radius: 10px;
+	padding-left:10px;
+	padding-top: 26px;	
+}
+
+.accordion {
+	float:right;
+	min-width: 200px;
+	max-width: 300px;
+	
+	
+	background: rgba(215,69,24,.6);
+/* 	padding:4px; */
+	padding-top:2px;
+	text-decoration: none;
+	font-size: 15px;
+	cursor: pointer;
+	color:#fff;
+}
+
+
+.accordion ul.default{
+	display: block;
+}
+
+.accordion ul{
+	list-style:none;
+/* 	display:none; */
+	margin:0;
+	padding-top:10px;
+	padding-left: 3px;
+}
+
+.accordion li{
+	font-size: 15px;
+	cursor: pointer;
+/* 	padding-left:3px; */
+	padding-bottom: 10px;
+	color:#fff;
+}
+
+.accordion li{
+	font-size: 15px;
+	cursor: pointer;
+/* 	padding-left:3px; */
+	padding-bottom: 10px;
+	color:#fff;
+}
+
+
+#contentPage{
+	margin-top:10px;
+	min-height: 200px;
+	max-height: 1000px;
+}
+
+#accountFunction{ 
+	float:right;
+}
+
+#topPage a {
+	margin: 5px;
+}
+
+.button{
+	border-radius:4px;
+	text-decoration: none;
+	font-size: 16px;
+	padding:4px;
+	background-color: #6495ED;
+}
+
+#accountLogOut{
+	background-color: #FF8C00;
+}
+
+#accountLogOut:hover{
+	background-color: #DC143C ;
+}
+
+.button:HOVER {
+	background-color: #FFF8DC;
+}
