--- a/u_turismu/war/resources/css/home.css
+++ b/u_turismu/war/resources/css/home.css
@@ -7,45 +7,108 @@
 	list-style: none;	
 }
 
+body{
+	background-image:url("../img/bg.jpg");
+}
+
+#mainPage{
+	position: inherit;
+    width:1100px;
+    min-height: 800px;
+	padding-top: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+	width: 1000px;
+	
+}
+
 div{
+/* 	border: 1px solid #125; */
 	border-radius: 8px;
 }
 
 .login{
-	height: 50px;
+	height: 30px;
 	width: auto;
-	border: 1px solid #ccc;
-	background-color: gray;
+/* 	border: 1px solid #ccc; */
+	background-color: rgba(99,99,99,.4);
 	border-radius: 10px;
 	padding-left:10px;
 	padding-right:10px;
 	padding-top: 25px;
-	
+	margin-right: 10px;
+	margin-bottom: 5px;
 }
+
 
 #loginForm{
 	float:right;
+}
+
+.fieldIN {
+	height: 20px;
+	width:150px;
+	border-radius:8px;
 	
 }
 
 #topPage{
-	height: 50px;
+	margin-top:10px;
+	height: 60px;
 	width: auto;
-	border: 1px solid #ccc;
-	background-color: gray;
+/* 	border: 1px solid #ccc; */
+	background-color: rgba(99,99,99,.5);
 	border-radius: 10px;
 	padding-left:10px;
-	padding-top: 26px;	
+	padding-top: 5px;	
 }
+
+#contentPage{
+	width:1000px;
+	margin-top:10px;
+	min-height: 500px;
+	max-height: 2000px;
+	height: auto;
+}
+
+
+#slideshow img{
+	border-radius:8px;
+}
+
+#slideshow{
+	
+	margin-top:10px;
+    width:1000px;
+    height:240px;
+    /*padding: 0px;*/
+    background-color:#E0E0E0;
+    /*border: 1px solid #ccc;*/
+}
+
+#content{
+	padding-left:10px;
+	float:left;
+	width:690px;
+	min-height:400px;
+	height:auto;
+	background-color:#E0E0E0;
+    background-color: rgba(255,250,255,.6); 
+}
+
 
 .accordion {
 	float:right;
-	min-width: 200px;
+	min-width: 290px;
 	max-width: 300px;
-	
+	min-height:400px;
+	height:auto;
 	
 	background: rgba(215,69,24,.6);
-/* 	padding:4px; */
 	padding-top:2px;
 	text-decoration: none;
 	font-size: 15px;
@@ -55,7 +118,7 @@ div{
 
 
 .accordion ul.default{
-	display: block;
+		
 }
 
 .accordion ul{
@@ -66,31 +129,62 @@ div{
 	padding-left: 3px;
 }
 
+.accordion li:hover{
+	background-color:#FFF8DC;
+}
+
+.accordion ul a li{
+	text-align:center;
+	text-decoration:none;
+	color: black;
+	padding-top:10px; 
+}
+
+.accordion a{
+	text-decoration:none;
+	color:black;
+}
 .accordion li{
+	text-decoration:none;
+	color:black;
+	display:block;
+	height:20px;
+	width:280px;
+	
+	border-radius:4px;
+	background-color:#6495ED;
+	
 	font-size: 15px;
-	cursor: pointer;
-/* 	padding-left:3px; */
 	padding-bottom: 10px;
+	margin:2px;
 	color:#fff;
 }
 
-.accordion li{
-	font-size: 15px;
-	cursor: pointer;
-/* 	padding-left:3px; */
-	padding-bottom: 10px;
-	color:#fff;
+.signup #signupForm{
+	color:black;
+	margin-top: 20px;
+	padding-left: 30px;
+	font-size: 18px;
 }
 
-
-#contentPage{
-	margin-top:10px;
-	min-height: 200px;
-	max-height: 1000px;
+.signup #signupForm{
+	margin-top: 5px;	
 }
 
-#accountFunction{ 
+#accountData{
+	float:left;
+	width: auto;
+	min-width: 700px;
+	height: 30px;
+	margin-top: 5px;
+	padding-top: 10px;
+}
+
+#accountFunction{
+	height:30px;
 	float:right;
+	margin-top: 5px;
+	padding-top: 10px;
 }
 
 #topPage a {
