--- a/trunk/u_turismu/war/resources/css/home.css
+++ b/trunk/u_turismu/war/resources/css/home.css
@@ -172,12 +172,14 @@ div{
 }
 
 #accountData{
+	background-color: rgba(255,250,255,.6);
 	float:left;
 	width: auto;
 	min-width: 700px;
 	height: 30px;
 	margin-top: 5px;
 	padding-top: 10px;
+	padding-left: 20px;
 }
 
 #accountFunction{
