--- a/u_turismu/war/resources/css/home.css
+++ b/u_turismu/war/resources/css/home.css
@@ -32,14 +32,14 @@ div{
 }
 
 .login{
-	height: 30px;
+	height: 40px;
 	width: auto;
 /* 	border: 1px solid #ccc; */
 	background-color: rgba(99,99,99,.4);
 	border-radius: 10px;
 	padding-left:10px;
 	padding-right:10px;
-	padding-top: 25px;
+	padding-top: 20px;
 	margin-right: 10px;
 	margin-bottom: 5px;
 }
@@ -53,6 +53,7 @@ div{
 	height: 20px;
 	width:150px;
 	border-radius:8px;
+	margin-top:5px;
 	
 }
 
@@ -160,16 +161,22 @@ div{
 	color:#fff;
 }
 
-.signup #signupForm{
-	color:black;
-	margin-top: 20px;
-	padding-left: 30px;
+#signupForm{
+	display:table;
+	widht:200px;
+	color:black;	
+	padding-top: 20px;
+	padding-left:10px;
 	font-size: 18px;
 }
 
-.signup #signupForm{
-	margin-top: 5px;	
+.signup{
+	color:blue;
+	font-size:20px;
+	padding-top:0px;
+	padding-left:5px;
 }
+
 
 #accountData{
 	background-color: rgba(255,250,255,.6);
@@ -214,5 +221,7 @@ div{
 }
 
 .error {
+/* 	position:fixed; */
+	top:-20px;
 	color: red;
 }
