--- a/trunk/u_turismu/war/resources/css/home.css
+++ b/trunk/u_turismu/war/resources/css/home.css
@@ -222,6 +222,12 @@ div{
 
 .error {
 /* 	position:fixed; */
-	top:-20px;
+/*	top:-20px;*/
 	color: red;
+	font-size: 14px;
+	background-color: rgba(255,250,255,.6);
+}
+
+#signupForm .error {
+	color: blue;
 }
